DumpFormatLoader: Code refactor